[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mock"
version = "0.1.0"
description = "Record and replay LLM API calls for deterministic testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "respx>=0.21",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.25",
    "openai>=1.30",
    "ruff>=0.4",
]

[project.scripts]
llm-mock = "llm_mock.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_mock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
