[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mock"
version = "1.0.0"
description = "pytest plugin to mock and replay OpenAI and Anthropic API calls — record once, replay forever, no API key needed"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "llm", "mock", "pytest", "testing", "openai", "anthropic",
    "replay", "record", "fixture", "vcr", "cassette", "ai",
    "claude", "gpt", "deterministic", "offline", "mocking"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27",
    "respx>=0.21",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.25",
    "openai>=1.30",
    "ruff>=0.4",
]

[project.scripts]
llm-mock = "llm_mock.cli:main"

[project.entry-points."pytest11"]
llm-mock = "llm_mock.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_mock*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
